# based-eval

./: .gitignore  AGENT.md  PROMPT_SCHEMA.md  README.md  TODO.md  cli.py  demo_human_vs_human.py  pyproject.toml  test_basic.py
.github/workflows/: run-evaluation.yml
based/: __init__.py  cli.py  game.py  player.py
based/adapters/: openrouter_adapter.py
chainlex/: __init__.py  cli_chainlex.py  game.py  game_engine.py  player.py  puzzle_generator.py  puzzle_loader.py
chainlex/inputs/: embeddings_cache.npy  embeddings_words.json  puzzles_eval.yaml  puzzles_training.yaml  word_pool.yaml
chainlex/optimization/: __init__.py  metrics.py  modules.py  optimize.py
chainlex/optimized_prompts/: clue_giver_optimized.md  guesser_optimized.md  optimization_results.json  optimized_pipeline.json
chainlex/prompts/: clue_giver.md  clue_giver.md.backup  guesser.md  guesser.md.backup  referee.md
codenames/: __init__.py  cli.py  cli_analytics.py  cli_codenames.py  cli_connections.py  game.py  player.py
codenames/adapters/: openrouter_adapter.py
codenames/optimization/: __init__.py  data_extractor.py  export_prompts.py  metrics.py  modules.py  optimize.py  pipeline.py  referee.py
codenames/prompts/: blue_operative.md  blue_spymaster.md  red_spymaster.md
codenames/utils/: logging.py
connections/: AGENT.md  README.md
connections/inputs/: connections_puzzles.yml  puzzle_difficulty.yml
connections/scripts/: extract_summaries.py
connections/tests/: test_cli.py  test_core.py
docs/: index.html
docs/logs/: 2025-12-19T00-45-53_gpt5-mini.html  2025-12-19T01-11-11_sonnet-4.5.html  2025-12-19T01-12-19_gpt5.2.html  2025-12-19T01-14-30_opus-4.5.html  (+6 more)
inputs/: model_mappings.yml
optimized_prompts/: optimization_results.json  optimized_pipeline.json
prompts/: blue_spymaster.md  red_operative.md  referee.md
results/: run_summaries.csv
shared/: __init__.py  cli_analytics.py
tests/: test_chainlex_game.py  test_chainlex_player.py  test_controllog.py  test_game.py  test_metadata_logging.py  test_player_integration.py  test_prompt_hydration.py
(+20 files in other folders)
