[project]
name = "based-eval"
version = "0.1.0"
description = "BASED Eval - Benchmark for Association, Sorting, and Entity Deduction - A multi-game AI evaluation framework"
authors = [
    {name = "Jacob Matson", email = "jacob@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "requests>=2.25.0",
    # Optional but recommended for full functionality
    "tiktoken>=0.5.0",  # For token counting
    "duckdb>=1.0.0",    # For MotherDuck integration
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
based = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codenames", "shared", "cli.py"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel.sources]
# Include shared inputs in the package
"shared/inputs" = "shared/inputs"
